# visualisation-ccif

./: .gitignore  Procfile  README.md  pyproject.toml  setup.sh
data/processed/: aggregated_list.csv  station_metadata.csv
data/raw/LSH/TN/: SH_MTN002705001.csv  SH_MTN003180001.csv  SH_MTN006163007.csv  SH_MTN008089003.csv  SH_MTN008145001.csv  SH_MTN008255001.csv  SH_MTN008367002.csv  SH_MTN015050001.csv  SH_MTN016279001.csv  SH_MTN017243002.csv  SH_MTN017300009.csv  SH_MTN017339002.csv  SH_MTN018279001.csv  SH_MTN022266001.csv  SH_MTN022372001.csv  SH_MTN024037005.csv  SH_MTN024138004.csv  SH_MTN025462001.csv  SH_MTN026295001.csv  SH_MTN028064002.csv  SH_MTN028322001.csv  SH_MTN029022001.csv  SH_MTN029168001.csv  SH_MTN030076001.csv  SH_MTN031042012.csv  SH_MTN033063001.csv  SH_MTN033214002.csv  SH_MTN035110003.csv  SH_MTN037003001.csv  SH_MTN038366001.csv  SH_MTN042098001.csv  SH_MTN044110002.csv  SH_MTN045270002.csv  SH_MTN051262001.csv  SH_MTN052469001.csv  SH_MTN053147001.csv  SH_MTN056165003.csv  SH_MTN060107001.csv  SH_MTN063426001.csv  SH_MTN064068001.csv  (+230 more)
data/raw/LSH/TX/: SH_MTX003180001.csv  SH_MTX004019001.csv  SH_MTX008145001.csv  SH_MTX012154003.csv  SH_MTX015050001.csv  SH_MTX016279001.csv  SH_MTX017300009.csv  SH_MTX017339002.csv  SH_MTX022147006.csv  SH_MTX022266001.csv  SH_MTX022372001.csv  SH_MTX024037005.csv  SH_MTX025127001.csv  SH_MTX025170001.csv  SH_MTX025219002.csv  SH_MTX025512001.csv  (+266 more)
data/raw/metadata/: metadata.geojson
frontend/: Home.py
frontend/pages/: Departments.py  Station_Data.py  Stations_List.py
notebook/: documentation.ipynb
(+3 files in other folders)
