[tool.poetry]
name = "ccif-d3js"
version = "0.1.0"
description = ""
authors = ["mintyfrankie <77310871+mintyfrankie@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
pandas = "^2.2.1"
streamlit = "^1.32.2"
statsmodels = "^0.14.1"
plotly-express = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
