[tool.poetry]
name = "visualization-ccif"
version = "0.5.0"
description = "A data visualisation dashboard to shed insights on climate change in France."
authors = ["mintyfrankie <77310871+mintyfrankie@users.noreply.github.com>"]
readme = "README.md"
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "3.11.8"
pandas = "^2.2.1"
statsmodels = "^0.14.1"
streamlit = "^1.32.2"
plotly-express = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
nbformat = "^5.10.3"
requests = "^2.32.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
